# adb2-watermark-reader

./: .gitattributes  README.md  audio-watermark-decoding.ipynb  ffmpeg_command.bat  image.py  pyproject.toml  video.py  watermark-decoder-first-try.ipynb
notebooks/: audio-watermark-reader.ipynb  video-watermark-reader.ipynb
sample_videos/: Readme.md  sample_1.ts  sample_2.ts
src/: audio_decoder.py  audio_spec_constants.py  main.py  math_utils.py  messages.json  spec_constants.py  utils.py  video-decoder.py  video_decoder.py  vp1_payload.py  watermark_message.py
src/vp1/: extended_vp1_message.py  vp1_message.py  vp1_packet.py  vp1_payload.py
